tests/sumo/tls/errors/next_loop/errors.sumo.agg
Warning: 1 total messages of type: Phase % only loops backs to itself in tlLogic '%', program '%'.
